--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
     "@radix-ui/react-slot": "^1.1.0",
     "@supabase/ssr": "latest",
     "@supabase/supabase-js": "latest",
+    "@types/google-one-tap": "^1.2.6",
     "autoprefixer": "10.4.20",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "google-one-tap": "^1.0.6",
     "lucide-react": "^0.468.0",
     "next": "latest",
     "next-themes": "^0.4.3",
